# Data-Eng-Houseing

./: .gitignore  Analytics_Report.csv  COPY[Analysis] POI_ADD URL Suggestions.csv  ICFI.csv  README.md  Report_Ticket.csv  cleaned_column.py  data_scripting.py  get_edit_around_date.py  locked_badge.py  matching_and_brand_tagging.py  modular_report.py  modular_report_config.csv  notebook1.ipynb  reports.py  testing_report.py  testing_report_config.csv  testing_scripts.py  versioning checks.py
Data_scripting/: .gitignore  BC_hours_and_closures_Edit_Contests.py  CDEF.py  GDF_translate.py  README.md  auto_report.py  brand_checking.py  cleaned_column.py  data_scripting.py  details_correction.py  edited_json_notes.py  editors_tab.py  locked_badge.py  matching_and_brand_tagging.py  non_aoi_containment_relationships.py  notebook1.ipynb  place_name.py  reports.py  requirements.txt  testing_scripts.py  versioning_checks.py  vheader_scrape.py
Quip_Auto/quip2deck/: README.md  pyproject.toml  requirements.txt
Quip_Auto/quip2deck/examples/: sample_quip.html  sample_quipx.html  sample_request.json
Quip_Auto/quip2deck/src/quip2deck/: cli.py  main.py  models.py  settings.py
Quip_Auto/quip2deck/src/quip2deck/connectors/: quip.py
Quip_Auto/quip2deck/src/quip2deck/parsers/: quip_html.py
Quip_Auto/quip2deck/src/quip2deck/planner/: outline.py
Quip_Auto/quip2deck/src/quip2deck/renderers/: keynote_agent.py  pptx_renderer.py
Quip_Auto/quip2deck/src/quip2deck/theming/: theme.py
Quip_Auto/quip2deck/src/quip2deck/utils/: files.py
Quip_Auto/quip2deck/tests/: test_roundtrip.py
(+11 files in other folders)
